--- a/Html/index.html
+++ b/Html/index.html
@@ -5,171 +5,205 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     </link>
-    <link rel="stylesheet" href="../Styles/Css/Index.css" type="text/css">
-    <link rel="stylesheet" href="../Styles/Scss/style.css" type="text/css">
-    <link rel="stylesheet" href="../Styles/Scss/custom.css" type="text/css">
+    <link rel="stylesheet" href="../Styles/scss/Index.css" type="text/css">
+    <title>Home</title>
 </head>
 
 <body>
-    <div class="dropdown invisible">
-        <nav class="navbar navbaar">
-            <button class="btn  btn-dark dropdown-toggle" data-bs-toggle="dropdown" type="button"
-                id="dropdownMenuButton1" aria-expanded="false">asdfh</button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
+
+    <!-- !navbar -->
+    <div class="navbaar ">
+        <nav class="navbar navbar-expand-lg navbar-light navbaar fixed-top">
+            <div class="container-fluid ">
+                <a class="navbar-brand" href="#">HOME PAGE</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">some other page</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Dropdown
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#">Action</a></li>
+                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
         </nav>
     </div>
 
-    <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
-            data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown button
+    <!-- !carousel -->
+    <div id="carouselExampleCaptions" class="carousel slide mx-auto my-3" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="https://source.unsplash.com/1920x800/?design" class="d-block " alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>First slide label</h5>
+                    <p>Some representative placeholder content for the first slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="https://source.unsplash.com/1920x800/?website" class="d-block " alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Second slide label</h5>
+                    <p>Some representative placeholder content for the second slide.</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="https://source.unsplash.com/1920x800/?host" class="d-block " alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Some representative placeholder content for the third slide.</p>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
         </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-        </ul>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
     </div>
-    <div class="bg-info clearfix">
-        <button type="button" class="btn btn-secondary float-start">Example Button floated left</button>
-        <button type="button" class="btn btn-secondary float-end">Example Button floated right</button>
+
+
+    <!-- !para -->
+    <div class="row blog justify-content-md-between gx-5 ">
+        <div class="col-5 para rounded-end p-1">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi minima illum quaerat asperiores adipisci
+                aut aliquid saepe sequi tempore sunt ut, deserunt rem perferendis suscipit eveniet placeat commodi
+                similique iusto. Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio blanditiis non qui minus
+                aperiam animi placeat explicabo est itaque maxime iusto temporibus, illo voluptas hic voluptatibus quas
+                eveniet nihil autem.</p>
+        </div>
+        <div class="col-5 para rounded-start p-1 ">
+
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid, repellat cumque ipsam eos quo aperiam
+                odit laborum dolor. Voluptate voluptas consequuntur neque impedit. Saepe, nesciunt eveniet
+                inventore voluptatibus voluptate consectetur. Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Itaque fugiat, repudiandae iste velit quo autem doloribus ipsa quasi minima facere eveniet quibusdam
+                deserunt alias unde nesciunt optio quos veniam deleniti?</p>
+        </div>
     </div>
-    <div>
-        <p class="text-primary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt tempora eligendi
-            ipsam voluptate harum aliquam explicabo velit autem voluptas placeat. Sunt, ullam accusamus impedit
-            eligendi
-            quibusdam pariatur voluptas recusandae aspernatur.</p>
-    </div>
-    <p class="title">hello</p>
-    <div class="study-units">
-        <img src="#" alt="some thing here !!!" srcset="" class="img-fluid">
-        <div class="su-1"></div>
-        <div class="su-2"></div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col order-last">
-                First in DOM, ordered last
+
+    <!-- !Blog card -->
+
+    <div class="row mb-2 bg-gradient ">
+        <div class="col-md-6 portolio-boxed-2 ">
+            <div
+                class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative card23 bg-gradient">
+                <div class="col p-4 d-flex flex-column position-static">
+                    <strong class="d-inline-block mb-2 text-primary">World</strong>
+                    <h3 class="mb-0">Featured post</h3>
+                    <div class="mb-1 text-white">Nov 12</div>
+                    <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to
+                        additional content.</p>
+                    <a href="#" class="stretched-link">Continue reading</a>
+                </div>
+                <div class="col-auto d-none d-lg-block portolio-boxed-2">
+                    <img src="https://source.unsplash.com/220x200/?study" alt="" srcset="">
+
+                </div>
             </div>
-            <div class="col">
-                Second in DOM, unordered
-            </div>
-            <div class="col order-first">
-                Third in DOM, ordered first
+        </div>
+        <div class="col-md-6 ">
+            <div
+                class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative card23 bg-gradient">
+                <div class="col p-4 d-flex flex-column position-static">
+                    <strong class="d-inline-block mb-2 text-danger fs-5">Design</strong>
+                    <h3 class="mb-0">Post title</h3>
+                    <div class="mb-1 text-white">Nov 11</div>
+                    <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to
+                        additional content.</p>
+                    <a href="#" class="stretched-link">Continue reading</a>
+                </div>
+                <div class="col-auto d-none d-lg-block">
+                    <img src="https://source.unsplash.com/220x200/?abstract" alt="" srcset="">
+
+                </div>
             </div>
         </div>
     </div>
-    <div class="container px-4 ">
-        <div class="row gx-5 ">
+
+    <!-- !footer -->
+
+    <div class="container bg-gradient">
+        <footer class="row row-cols-6 py-3 my-3 border-top ">
             <div class="col">
-                <div class="p-3 border bg-light">Custom column padding</div>
+                <a href="#" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
+                    <img src="https://source.unsplash.com/80x50/?logo" alt=" logo" srcset="" class="bi me-2">
+                </a>
+                <p class="text-white">Afzal© 2021</p>
             </div>
+            <div class="col"> </div>
+
             <div class="col">
-                <div class="p-3 border bg-light">Custom column padding</div>
+                <h5 class="fs-3">Section</h5>
+                <ul class="nav flex-column">
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Home</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Features</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Pricing</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">FAQs</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">About</a></li>
+                </ul>
             </div>
-        </div>
-    </div>
-    <div class="container px-4 ">
-        <div class="row gx-5 gy-5">
-            <div class="col-5">
-                <div class="p-3 border bg-light">Custom column padding</div>
+
+            <div class="col">
+                <h5 class="fs-3">Section</h5>
+                <ul class="nav flex-column">
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Home</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Features</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Pricing</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">FAQs</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">About</a></li>
+                </ul>
             </div>
-            <div class="col-7">
-                <div class="p-3 border bg-light">Custom column padding</div>
+
+            <div class="col">
+                <h5 class="fs-3">Section</h5>
+                <ul class="nav flex-column">
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Home</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Features</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">Pricing</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">FAQs</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-white">About</a></li>
+                </ul>
             </div>
-            <div class="col-7">
-                <div class="p-3 border bg-light">Custom column padding</div>
-            </div>
-            <div class="col-5">
-                <div class="p-3 border bg-light">Custom column padding</div>
-            </div>
-        </div>
+            <div class="col"> </div>
+        </footer>
     </div>
-    <code>&lt;section&gt;
-        <p>asdasd</p>
-        <p>sadas</p>
-        <p>asdas</p>
-        <p>asdasd</p>
-    </code> should be wrapped as inline.
-    <samp>This text is meant to be treated as sample output from a computer program.</samp>
-    To switch directories, type <kbd>cd</kbd> followed by the name of the directory.<br>
-    To edit settings, press <kbd><kbd>ctrl</kbd> + <kbd>8</kbd></kbd>
-
-    <div class="table-responsive">
-        <table class="table">
-            <tr>
-                <td>desfs</td>
-                <td>sdfs</td>
-                <td>sdf</td>
-                <td>sdf</td>
-                <td>dsfsdf</td>
-            <tr>
-                <td>sdfsdfsd</td>
-                <td>sdfs</td>
-                <td>sdf</td>
-                <td>sdf</td>
-                <td>dsfsdf</td>
-            </tr>
-            </tr>
-        </table>
-    </div>
-    <div class="table-responsive">
-        <table class="table">
-            ...
-        </table>
-    </div>
-
-    <div class="table-responsive-sm">
-        <table class="table">
-            ...
-        </table>
-    </div>
-
-    <div class="table-responsive-md">
-        <table class="table">
-            ...
-        </table>
-    </div>
-
-    <div class="table-responsive-lg">
-        <table class="table">
-            ...
-        </table>
-    </div>
-
-    <div class="table-responsive-xl">
-        <table class="table">
-            ...
-        </table>
-    </div>
-
-    <div class="table-responsive-xxl">
-        <table class="table">
-            ...
-        </table>
-    </div>
-    <p class="hey">augwea</p>
-    <p class="placeholder-glow placeholder">
-        <span class="placeholder col-12"></span>
-        asdajsdhausgdauysdgasuhdfasfd
-    </p>
-    <p class="placeholder-glow">
-        <span class="placeholder col-12">asdajsdhausgdauysdgasuhdfasfd</span>
-    </p>
-
-    <p class="placeholder-wave">
-        <span class="">asdajsdhausgdauysdgasuhdfasfd</span>
-    </p>
     <!-- !script -->
-    <!-- <script src="../Js/Index.js"> </script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
