create main file for image flex task

--- a/Html/index.html
+++ b/Html/index.html
@@ -16,9 +16,16 @@
 
     <!-- !navbar -->
     <div class="navbaar ">
-        <nav class="navbar navbar-expand-lg navbar-light navbaar fixed-top">
+        <nav class="navbar navbar-expand-md navbar-light navbaar fixed-top">
             <div class="container-fluid ">
-                <a class="navbar-brand" href="#">HOME PAGE</a>
+                <a class="navbar-brand" href="#">
+                    <figure>
+                        <img src="https://source.unsplash.com/80x20/?logo,dark,black" alt="logo" srcset="">
+                        <!--  <figcaption>
+                            My Website
+                        </figcaption> -->
+                    </figure>
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -35,11 +42,11 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
-                                Dropdown
+                                Click me
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
+                                <li><a class="dropdown-item" href="#">hello</a></li>
+                                <li><a class="dropdown-item" href="#">Another world</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -53,7 +60,7 @@
     </div>
 
     <!-- !carousel -->
-    <div id="carouselExampleCaptions" class="carousel slide mx-auto my-3" data-bs-ride="carousel">
+    <div id="carouselExampleCaptions" class="carousel slide mx-auto my-5 gy-5 pt-5 mt-lg-5" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
@@ -132,7 +139,7 @@
                     <a href="#" class="stretched-link">Continue reading</a>
                 </div>
                 <div class="col-auto d-none d-lg-block portolio-boxed-2">
-                    <img src="https://source.unsplash.com/220x200/?study" alt="" srcset="">
+                    <img src="https://source.unsplash.com/300x250/?study" alt="" srcset="">
 
                 </div>
             </div>
@@ -149,7 +156,7 @@
                     <a href="#" class="stretched-link">Continue reading</a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
-                    <img src="https://source.unsplash.com/220x200/?abstract" alt="" srcset="">
+                    <img src="https://source.unsplash.com/300x250/?abstract" alt="" srcset="">
 
                 </div>
             </div>
