--- a/Html/main.html
+++ b/Html/main.html
@@ -14,21 +14,38 @@
 
 <body>
     <div class="container">
-        <h1 class="border border-danger text-center bg-gradient fs-1 ">title</h1>
+        <h1 class="border border-danger text-center bg-gradient fs-1">title</h1>
         <div class=" ">
-            <div class=" d-flex flex-wrap justify-content-between gy-5 gx-5">
-                <div class=""><img src="https://source.unsplash.com/500x500/?grey" alt="" srcset="" class=" pic"></div>
-                <div class=""><img src="https://source.unsplash.com/500x500/?green" alt="" srcset="" class=" pic"></div>
-                <div class=""><img src="https://source.unsplash.com/500x500/?grey" alt="" srcset="" class=" pic"></div>
-                <div class=""><img src="https://source.unsplash.com/500x500/?green" alt="" srcset="" class=" pic"></div>
-                <div class=""><img src="https://source.unsplash.com/500x500/?grey" alt="" srcset="" class=" pic"></div>
-                <div class=""><img src="https://source.unsplash.com/500x500/?green" alt="" srcset="" class=" pic"></div>
+            <div class=" d-flex flex-wrap flex-row ph container-fluid ">
+                <img src="https://source.unsplash.com/500x500/?grey" alt="1" srcset="" class=" justify-content-start">
+                <img src="https://source.unsplash.com/500x500/?green" alt="2" srcset="" class="ps justify-content-end align-self-end">
+                <div class="align-self-start ">
+                </div>
+                <div class="align-self-end picup">
+                </div> 
             </div>
-            <!-- <div class="flex-column">
-            </div> -->
+            <div class=" d-flex flex-column flex-wrap justify-content-between picspace container ">
+                <div class="align-self-start picup2">
+                    <img src="https://source.unsplash.com/500x500/?grey" alt="3" srcset="" class=" ">
+                </div>
+                <div class="align-self-end picup3">
+                    <img src="https://source.unsplash.com/500x500/?green" alt="4" srcset="" class=" ">
+                </div>
+                <div class="align-self-start picup4">
+                    <img src="https://source.unsplash.com/500x500/?grey" alt="5" srcset="" class=" ">
+                </div>
+                <div class="align-self-end picup5">
+                    <img src="https://source.unsplash.com/500x500/?green" alt="6" srcset="" class="">
+                </div>
+            </div>
         </div>
-        <!-- <div>
-        </div> -->
+    </div>
+    <div class="d-flex flex-column bg-white border border-5">
+        <div class="align-self-start">1</div>
+        <div class="align-self-end">2</div>
+        <div class="align-self-center">3</div>
+        <div class="align-self-baseline">4</div>
+        <div class="align-self-stretch">5</div>
     </div>
     <!-- !script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
