--- a/Html/project.html
+++ b/Html/project.html
@@ -18,8 +18,7 @@
 <body>
     <div class="container-fluid bg-clr">
         <div class="row ">
-            <h1 class="page-header text-center text-danger container-fluid">Project</h1>
-
+            <h1 class="page-header text-center text-danger">Project</h1>
         </div>
     </div>
     <script src="../Js/Project.js"></script>
