--- a/tasks/pages/Investor Relation.html
+++ b/tasks/pages/Investor Relation.html
@@ -16,8 +16,16 @@
         }
 
         body {
-            background: #fafafa;
-            background-color: cornsilk;
+            background: #FFF;
+        }
+
+        section.investment-thesis-section {
+            background: #f5f5f5;
+            padding: 50px 0;
+        }
+
+        .bg-white {
+            background: #fff !important;
         }
 
         .colorRed {
@@ -57,10 +65,9 @@
         }
 
         .block {
-            background: #fff;
-            -webkit-box-shadow: 0 2px 12px rgb(0 0 0 / 10%);
-            box-shadow: 0 2px 12px rgb(0 0 0 / 10%);
-            border-radius: 4px;
+
+
+
             overflow: hidden;
             padding: 30px;
             position: relative;
@@ -95,8 +102,12 @@
             overflow: hidden;
             padding: 20px;
             position: relative;
-            margin-bottom: 10px;
-            margin-top: auto;
+            margin: 10px 30px;
+        }
+
+        .border {
+            border: 1px solid #fff;
+            padding: 20px;
         }
 
     </style>
@@ -126,28 +137,45 @@
             </p>
         </div>
     </div>
-
-    <div>
-        <h2 class="text-center">Investment Thesis</h2>
-    </div>
-    <div class="row block investment-thesis">
-        <div class="column center card">safyhsdfgsdufhg</div>
-        <div class="column center card">safyhsdfgsdufhg</div>
-        <div class="column center card">safyhsdfgsdufhg</div>
-    </div>
+    <section class="investment-thesis-section">
+        <div>
+            <h2 class="text-center">Investment Thesis</h2>
+        </div>
+        <div class="row block investment-thesis">
+            <div class="column center card">Community Driven Platform</div>
+            <div class="column center card">One of a kind - Fist to market</div>
+            <div class="column center card">Early stage opportunity</div>
+        </div>
+    </section>
+    <section class="investment-thesis-section bg-white">
+        <div>
+            <h2 class="text-center">Investment Thesis</h2>
+        </div>
+        <div class="row block investment-thesis">
+            <div class="column center card">Community Driven Platform</div>
+            <div class="column center card">One of a kind - Fist to market</div>
+            <div class="column center card">Early stage opportunity</div>
+        </div>
+    </section>
     <div class="info ">
         <div class="">
             <h2 class="text-center">Data at a Glance</h2>
         </div>
         <div class="row ">
-            <div class="column center ">safyhsdfgsdufhg</div>
-            <div class="column center ">safyhsdfgsdufhg</div>
-            <div class="column center ">safyhsdfgsdufhg</div>
+            <div class="column center border">
+                <p>Our reach</p> <br>
+                <strong>
+                    <p>150M+</p>
+                </strong>
+
+            </div>
+            <div class="column center border">safyhsdfgsdufhg</div>
+            <div class="column center border">safyhsdfgsdufhg</div>
         </div>
         <div class="row ">
-            <div class="column center ">safyhsdfgsdufhg</div>
-            <div class="column center ">safyhsdfgsdufhg</div>
-            <div class="column center ">safyhsdfgsdufhg</div>
+            <div class="column center border">safyhsdfgsdufhg</div>
+            <div class="column center border">safyhsdfgsdufhg</div>
+            <div class="column center border">safyhsdfgsdufhg</div>
         </div>
     </div>
 </body>
