--- a/tasks/pages/Investor Relation.html
+++ b/tasks/pages/Investor Relation.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Investor Relation</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css"
+        integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
     <style>
         * {
             margin: 0;
@@ -33,10 +38,8 @@
         }
 
         .banner-img {
-            max-width: 100vw;
-            width: 100%;
+            min-width: 98.5vw;
             max-height: 70vh;
-            margin: 0;
         }
 
         .centered {
@@ -47,51 +50,39 @@
             color: #FFFFFF;
         }
 
-        .info {
+        .everest-community {
+            font-weight: bold;
+            font-size: 1.5rem;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 50px;
+        }
+
+        .bg-blue-1 {
             background: #183c68;
             color: #fff;
             padding: 20px;
-        }
-
-        .container {
-            max-width: 100vw;
-            width: 100%;
-            max-height: 70vh;
-            margin: 0;
-        }
-
-        .text-center {
-            text-align: center;
+            margin: auto;
         }
 
         .block {
-
-
-
             overflow: hidden;
-            padding: 30px;
+            padding: 10px;
             position: relative;
-            margin-bottom: 30px;
             margin-top: unset;
         }
 
-        .row {
-            display: flex;
-        }
-
-        .column {
-            flex: 50%;
-        }
-
-        .center {
-            display: flex;
+        .center-1 {
+            display: grid;
             justify-content: center;
             align-items: center;
         }
 
-        .investment-thesis {
-            padding: auto;
-            margin: auto;
+        .block-title {
+            font-size: 1.5rem;
+            font-weight: bold;
+            margin-bottom: 20px;
         }
 
         .card {
@@ -100,84 +91,241 @@
             box-shadow: 0 2px 12px rgb(0 0 0 / 10%);
             border-radius: 5px;
             overflow: hidden;
-            padding: 20px;
+            padding: 30px;
             position: relative;
             margin: 10px 30px;
         }
 
-        .border {
+        .border-1 {
             border: 1px solid #fff;
             padding: 20px;
+        }
+
+        .border-2 {
+            background: #f5f5f5;
+            border: 1px solid #cecbcb;
+            padding: 30px;
+            border-radius: 5px;
+            width: 30%;
+        }
+
+        .data-1 {
+            background: #183c68;
+            color: #fff;
+            border-radius: 5px;
+            overflow: hidden;
+            position: relative;
+            padding: 30px;
+            position: relative;
+            margin: 10px 30px;
+
+        }
+
+        .flt-r {
+            float: right;
+        }
+
+        .flt-l {
+            float: left;
+        }
+
+        .flt-c {
+            float: center;
+        }
+
+        .meeting-svg-1 {
+            max-width: 100px;
+            padding: 20px;
+        }
+
+        .meet-text {
+            padding: 10px;
+        }
+
+        .talk-directly {
+            margin-top: 10px;
+            padding: 50px;
+        }
+
+        .talk-1 {
+            display: grid;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .sign-up-for-investor-alert {
+            background: #f5f5f5;
+            padding: 50px 0;
+        }
+
+        .sign-up-alt {
+            color: #183c68;
+            font-weight: bold;
+            padding: 20px;
+        }
+
+        .btn-clr-blue {
+            background: #183c68;
+            color: #fff;
+            border-radius: 75px;
+        }
+
+        .download-1 {
+            background: #f5f5f5;
+            padding: 50px 0;
         }
 
     </style>
 </head>
 
 <body>
-    <div class="block">
-        <div class="">
-            <div class=""><img src="https://source.unsplash.com/1300x1000/?black,everest" alt="banner image" class="banner-img "></div>
-            <p class="centered ">Centered</p>
-        </div>
-        <div class="info row">
-            <h1 class="text-center column">what's your everest?</h1>
-            <p class=" column">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit suscipit, omnis totam fugit quas aut aliquam corrupti non?
-                Numquam officiis modi dolor saepe expedita consequuntur fugit facilis molestiae, soluta ea. lorem ipsum dolor Lorem ipsum dolor sit
-                amet consectetur adipisicing elit. Iste nam corporis blanditiis pariatur tempora corrupti eos.
-                Pariatur facere a repellendus tenetur ullam totam deleniti culpa nemo delectus neque, placeat id?
-
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores ipsam illo labore vel quaerat eum necessitatibus, laudantium,
-                alias maiores veniam ea. Ducimus quaerat accusantium unde facere laudantium saepe qui reiciendis?
-            </p>
-        </div>
-        <div>
-            <p class="text-center ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem modi, doloribus excepturi minima eligendi nostrum
-                repudiandae. Delectus rerum veniam, corrupti nam, necessitatibus beatae vero obcaecati consequatur quibusdam aut labore distinctio!
-            </p>
-        </div>
-    </div>
-    <section class="investment-thesis-section">
-        <div>
-            <h2 class="text-center">Investment Thesis</h2>
-        </div>
-        <div class="row block investment-thesis">
-            <div class="column center card">Community Driven Platform</div>
-            <div class="column center card">One of a kind - Fist to market</div>
-            <div class="column center card">Early stage opportunity</div>
-        </div>
-    </section>
-    <section class="investment-thesis-section bg-white">
-        <div>
-            <h2 class="text-center">Investment Thesis</h2>
-        </div>
-        <div class="row block investment-thesis">
-            <div class="column center card">Community Driven Platform</div>
-            <div class="column center card">One of a kind - Fist to market</div>
-            <div class="column center card">Early stage opportunity</div>
-        </div>
-    </section>
-    <div class="info ">
-        <div class="">
-            <h2 class="text-center">Data at a Glance</h2>
-        </div>
-        <div class="row ">
-            <div class="column center border">
-                <p>Our reach</p> <br>
-                <strong>
-                    <p>150M+</p>
-                </strong>
-
+    <div class="container-fluid">
+        <section class="banner-img-top">
+            <div class="">
+                <div class=""><img src="https://source.unsplash.com/1300x1000/?black,everest" alt="banner image"
+                        class="banner-img img img-responsive"> </div>
+                <p class="centered ">Centered</p>
             </div>
-            <div class="column center border">safyhsdfgsdufhg</div>
-            <div class="column center border">safyhsdfgsdufhg</div>
-        </div>
-        <div class="row ">
-            <div class="column center border">safyhsdfgsdufhg</div>
-            <div class="column center border">safyhsdfgsdufhg</div>
-            <div class="column center border">safyhsdfgsdufhg</div>
-        </div>
+        </section>
+        <section class="">
+            <div class="bg-blue-1 row what-everest-1  ">
+                <div class="text-center-1 col-xs  col-sm-4">
+                    <h1>what's your everest?</h1>
+                </div>
+                <div class="col-xs  col-sm-8">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit suscipit, omnis totam fugit quas aut aliquam
+                        corrupti non? Numquam officiis modi dolor saepe expedita consequuntur fugit facilis molestiae, soluta ea. lorem ipsum
+                        dolor Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste nam corporis blanditiis pariatur tempora corrupti eos.
+                        Pariatur facere a repellendus tenetur ullam totam deleniti culpa nemo delectus neque, placeat id? Lorem ipsum dolor sit
+                        amet consectetur adipisicing elit. Asperiores ipsam illo labore vel quaerat eum necessitatibus, laudantium, alias maiores
+                        veniam ea. </p>
+                </div>
+            </div>
+        </section>
+        <section class="everest-community">
+            <div class="text-center-1 ">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem modi, doloribus excepturi minima eligendi
+                    nostrum repudiandae. Delectus rerum veniam, corrupti nam, necessitatibus beatae vero obcaecati consequatur quibusdam aut labore
+                    distinctio! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae doloremque, ducimus inventore nisi esse modi
+                    beatae sint cumque quia maxime corrupti perspiciatis? Eveniet assumenda provident voluptas? Nisi vel quas modi!
+                </p>
+            </div>
+        </section>
+        <section class="investment-thesis-section ">
+            <div class="center-1">
+                <div class="">
+                    <h2 class="text-center">Investment Thesis</h2>
+                </div>
+                <div class="row block investment-thesis ">
+                    <div class="col-xs  col-sm-3  card">Community Driven Platform</div>
+                    <div class="col-xs  col-sm-3 col-sm-offset-1  card">One of a kind - First <br> to market</div>
+                    <div class="col-xs  col-sm-3 col-sm-offset-1  card">Early stage opportunity</div>
+                </div>
+                <div class="row block investment-thesis ">
+                    <div class="col-xs  col-sm-3  card">Brand Awareness & Reach</div>
+                    <div class="col-xs  col-sm-3 col-sm-offset-1  card">World Class Talent</div>
+                    <div class="col-xs  col-sm-3 col-sm-offset-1  card">Significant IP Vault</div>
+                </div>
+            </div>
+        </section>
+        <section class="data-glance">
+            <div class="bg-blue-1 center-1">
+                <div class="">
+                    <h2 class="center-1">Data at a Glance</h2>
+                </div>
+                <div class="row ">
+                    <div class="col-xs  col-sm-3  center-1 border-1 data-1">
+                        <p>Our Reach <br> <b>150M+</b></p>
+                    </div>
+                    <div class="col-xs  col-sm-3   center-1  border-1 data-1">
+                        <p>Founded <br> <b>2020</b></p>
+                    </div>
+                    <div class="col-xs  col-sm-3  center-1   border-1 data-1">
+                        <p>Active Seller <br> <b>1,250+</b> <br> (Growing Daily)</p>
+                    </div>
+                </div>
+                <div class="row ">
+                    <div class="col-xs  col-sm-3  center-1 border-1 data-1">
+                        <p>Active SKU's <br> <b>2M+</b> <br>(Growing Daily)</p>
+                    </div>
+                    <div class="col-xs  col-sm-3  center-1 border-1 data-1">
+                        <p># Of Product <br> <b>1.15M+</b> <br> (Growing Daily)</p>
+                    </div>
+                    <div class="col-xs  col-sm-3  center-1 border-1 data-1">
+                        <p>Inventory Under Control <br> <b>$1.25B+</b></p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="talk-directly">
+            <div class="row ">
+                <div class="col-xs  col-sm-5 col-sm-offset-1 ">
+                    <div class="talk-1">
+                        <h1 class="">Talk Directly with <br> Bill Voss,</h1>
+                        <p>Our Founder and Cheif Executive Officer</p>
+                    </div>
+                </div>
+                <div class="col-xs  col-sm-3 border-2">
+                    <div class="row ">
+                        <div class="col-xs  col-1"><img src="../svg/All_Icons-for-New-Pages/Schedule-Meeting.svg" alt="meeting"
+                                class="img-responsive img meeting-svg-1 flt-l">
+                        </div>
+                        <div class="col-1 col-xs  flt-r meet-text">
+                            <p>Schedule meeting</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="sign-up-for-investor-alert">
+            <div class="row ">
+                <div class="col-xs col-sm-offset-1 col-sm-3 ">
+                    <img src="../svg/All_Icons-for-New-Pages/Investor-Alerts.svg" alt="meeting" class="img-responsive img flt-r">
+                </div>
+                <div class="col-xs col-sm-offset-1 col-sm-4  ">
+                    <h1 class=" sign-up-alt">Sign Up For Investor Alert </h1>
+                    <form>
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Name *">
+                        </div>
+                        <div class="form-group">
+                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email *">
+                        </div>
+                        <div class="form-group">
+                            <input type="tel" class="form-control" id="exampleInputPassword1" placeholder="Phone Number *">
+                        </div>
+                        <button type="submit" class="btn btn-default btn-clr-blue">Sign Up</button>
+                </div>
+        </section>
+        <section class="download-1">
+            <div class="row ">
+                <div class=" col-xs col-sm-offset-3 col-sm-3 ">
+                    <h1 class=" sign-up-alt">Sign Up For Investor Alert </h1>
+                    <form>
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Name *">
+                        </div>
+                        <div class="form-group">
+                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email *">
+                        </div>
+                        <div class="form-group">
+                            <input type="tel" class="form-control" id="exampleInputPassword1" placeholder="Phone Number *">
+                        </div>
+                        <button type="submit" class="btn btn-default btn-clr-blue">Dowload</button>
+                </div>
+                <div class="col-xs col-sm-offset-1 col-sm-4 ">
+                    <img src="../svg/All_Icons-for-New-Pages/eBook-IR-Page.svg" alt="meeting" class="img-responsive img flt-r">
+                </div>
+        </section>
+
     </div>
+
+
+    <!-- !script -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 
 </html>
