--- a/tasks/pages/Investor Relation.html
+++ b/tasks/pages/Investor Relation.html
@@ -10,13 +10,12 @@
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css"
         integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-    <style>
+    <link rel="stylesheet" href="../styles/css/style.css">
+<!--     <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-
             font-family: "Poppins", georgia, serif;
         }
 
@@ -175,7 +174,7 @@
             padding: 50px 0;
         }
 
-    </style>
+    </style> -->
 </head>
 
 <body>
