extra space prob sloved

--- a/tasks/pages/Investor Relation.html
+++ b/tasks/pages/Investor Relation.html
@@ -11,187 +11,23 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css"
         integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/css/style.css">
-    <!--     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: "Poppins", georgia, serif;
-        }
 
-        body {
-            background: #FFF;
-        }
-
-        section.investment-thesis-section {
-            background: #f5f5f5;
-            padding: 50px 0;
-        }
-
-        .bg-white {
-            background: #fff !important;
-        }
-
-        .colorRed {
-            color: #C93636;
-        }
-
-        .banner-img {
-            min-width: 98.5vw;
-            max-height: 70vh;
-        }
-
-        .centered {
-            position: absolute;
-            top: 25%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: #FFFFFF;
-        }
-
-        .everest-community {
-            font-weight: bold;
-            font-size: 1.5rem;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 50px;
-        }
-
-        .bg-blue-1 {
-            background: #183c68;
-            color: #fff;
-            padding: 20px;
-            margin: auto;
-        }
-
-        .block {
-            overflow: hidden;
-            padding: 10px;
-            position: relative;
-            margin-top: unset;
-        }
-
-        .center-1 {
-            display: grid;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .block-title {
-            font-size: 1.5rem;
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
-
-        .card {
-            background: #fff;
-            -webkit-box-shadow: 0 2px 12px rgb(0 0 0 / 10%);
-            box-shadow: 0 2px 12px rgb(0 0 0 / 10%);
-            border-radius: 5px;
-            overflow: hidden;
-            padding: 30px;
-            position: relative;
-            margin: 10px 30px;
-        }
-
-        .border-1 {
-            border: 1px solid #fff;
-            padding: 20px;
-        }
-
-        .border-2 {
-            background: #f5f5f5;
-            border: 1px solid #cecbcb;
-            padding: 30px;
-            border-radius: 5px;
-            width: 30%;
-        }
-
-        .data-1 {
-            background: #183c68;
-            color: #fff;
-            border-radius: 5px;
-            overflow: hidden;
-            position: relative;
-            padding: 30px;
-            position: relative;
-            margin: 10px 30px;
-
-        }
-
-        .flt-r {
-            float: right;
-        }
-
-        .flt-l {
-            float: left;
-        }
-
-        .flt-c {
-            float: center;
-        }
-
-        .meeting-svg-1 {
-            max-width: 100px;
-            padding: 20px;
-        }
-
-        .meet-text {
-            padding: 10px;
-        }
-
-        .talk-directly {
-            margin-top: 10px;
-            padding: 50px;
-        }
-
-        .talk-1 {
-            display: grid;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .sign-up-for-investor-alert {
-            background: #f5f5f5;
-            padding: 50px 0;
-        }
-
-        .sign-up-alt {
-            color: #183c68;
-            font-weight: bold;
-            padding: 20px;
-        }
-
-        .btn-clr-blue {
-            background: #183c68;
-            color: #fff;
-            border-radius: 75px;
-        }
-
-        .download-1 {
-            background: #f5f5f5;
-            padding: 50px 0;
-        }
-
-    </style> -->
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="">
         <section class="banner-img-top">
             <div class="">
-                <div class=""><img src="https://source.unsplash.com/1300x1000/?black,everest" alt="banner image"
-                        class="banner-img img img-responsive"> </div>
+                <div class=""><img src="https://source.unsplash.com/1300x1000/?black,everest" alt="banner image" class="banner-img "> </div>
                 <p class="centered ">Centered</p>
             </div>
         </section>
         <section class="what-everest">
-            <div class="bg-blue-1 row ">
-                <div class="text-center-1 col-xs col-sm-4">
+            <div class="bg-blue">
+                <div class="text-center col-xs col-sm-4">
                     <h1>what's your everest?</h1>
                 </div>
-                <div class="col-xs col-sm-8">
+                <div class="col-xs col-sm-8 ">
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit suscipit, omnis totam fugit quas aut aliquam
                         corrupti non? Numquam officiis modi dolor saepe expedita consequuntur fugit facilis molestiae, soluta ea. lorem ipsum
@@ -203,7 +39,7 @@
             </div>
         </section>
         <section class="everest-community">
-            <div class="text-center-1 ">
+            <div class="text-center ">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem modi, doloribus excepturi minima eligendi
                     nostrum repudiandae. Delectus rerum veniam, corrupti nam, necessitatibus beatae vero obcaecati consequatur quibusdam aut labore
                     distinctio! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae doloremque, ducimus inventore nisi esse modi
@@ -214,7 +50,7 @@
         <section class="investment-thesis-section ">
             <div class="center-1">
                 <div class="text-center">
-                    <h2 >Investment Thesis</h2>
+                    <h2>Investment Thesis</h2>
                 </div>
                 <div class="row block investment-thesis number-1">
                     <div class="col-xs col-sm-3 col-sm-offset-1 card tab  num-1">
@@ -282,29 +118,29 @@
             </div>
         </section>
         <section class="data-glance">
-            <div class="bg-blue-1 center-1">
-                <div class="">
-                    <h2 class="center-1">Data at a Glance</h2>
+            <div class="bg-blue-1 ">
+                <div class="text-center">
+                    <h2>Data at a Glance</h2>
                 </div>
                 <div class="row ">
-                    <div class="col-xs col-sm-3  center-1 border-1 data-1">
+                    <div class="col-xs col-sm-3  text-center border-1 data-1">
                         <p>Our Reach <br> <b>150M+</b></p>
                     </div>
-                    <div class="col-xs col-sm-3   center-1  border-1 data-1">
+                    <div class="col-xs col-sm-3   text-center  border-1 data-1">
                         <p>Founded <br> <b>2020</b></p>
                     </div>
-                    <div class="col-xs col-sm-3  center-1   border-1 data-1">
+                    <div class="col-xs col-sm-3  text-center   border-1 data-1">
                         <p>Active Seller <br> <b>1,250+</b> <br> (Growing Daily)</p>
                     </div>
                 </div>
                 <div class="row ">
-                    <div class="col-xs col-sm-3  center-1 border-1 data-1">
+                    <div class="col-xs col-sm-3  text-center border-1 data-1">
                         <p>Active SKU's <br> <b>2M+</b> <br>(Growing Daily)</p>
                     </div>
-                    <div class="col-xs col-sm-3  center-1 border-1 data-1">
+                    <div class="col-xs col-sm-3  text-center border-1 data-1">
                         <p># Of Product <br> <b>1.15M+</b> <br> (Growing Daily)</p>
                     </div>
-                    <div class="col-xs col-sm-3  center-1 border-1 data-1">
+                    <div class="col-xs col-sm-3  text-center border-1 data-1">
                         <p>Inventory Under Control <br> <b>$1.25B+</b></p>
                     </div>
                 </div>
