made some changes in the investment thesis div to ul il.

--- a/tasks/pages/Investor Relation.html
+++ b/tasks/pages/Investor Relation.html
@@ -17,17 +17,14 @@
 <body>
     <div class="">
         <section class="banner-img-top">
-            <div class="">
-                <div class=""><img src="https://source.unsplash.com/1300x1000/?black,everest" alt="banner image" class="banner-img "> </div>
-                <p class="centered ">Centered</p>
-            </div>
+            <img src="https://source.unsplash.com/1300x1000/?black,everest" alt="banner image" class="banner-img ">
         </section>
         <section class="what-everest">
             <div class="bg-blue">
-                <div class="text-center col-xs col-sm-4">
-                    <h1>what's your everest?</h1>
+                <div class="col-sm-offset-1 col-xs col-sm-4">
+                    <h2>what's your everest?</h2>
                 </div>
-                <div class="col-xs col-sm-8 ">
+                <div class="col-xs col-sm-6 ">
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit suscipit, omnis totam fugit quas aut aliquam
                         corrupti non? Numquam officiis modi dolor saepe expedita consequuntur fugit facilis molestiae, soluta ea. lorem ipsum
@@ -50,10 +47,10 @@
         <section class="investment-thesis-section ">
             <div class="center-1">
                 <div class="text-center">
-                    <h2>Investment Thesis</h2>
+                    <h2 class="title"><strong>Investment Thesis</strong></h2>
                 </div>
-                <div class="row block investment-thesis number-1">
-                    <div class="col-xs col-sm-3 col-sm-offset-1 card tab  num-1">
+                <!-- <div class="row block investment-thesis number-1">
+                    <div class="col-xs col-sm-3 col-sm-offset-1 card tab ">
                         <input type="checkbox" id="chck1">
                         <label class="tab-label" for="chck1">One of a kind - First to market</label>
                         <div class="tab-content">
@@ -63,7 +60,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-xs col-sm-3 card tab num-1">
+                    <div class="col-xs col-sm-3 card tab">
                         <input type="checkbox" id="chck2">
                         <label class="tab-label" for="chck2">Community Driven Platform</label>
                         <div class="tab-content">
@@ -73,7 +70,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-xs col-sm-3 col-sm-offset-1 card tab num-1">
+                    <div class="col-xs col-sm-3 col-sm-offset-1 card tab">
                         <input type="checkbox" id="chck3">
                         <label class="tab-label" for="chck3">Early stage opportunity</label>
                         <div class="tab-content">
@@ -85,7 +82,7 @@
                     </div>
                 </div>
                 <div class="row block investment-thesis number-2">
-                    <div class="col-xs col-sm-3 card tab num-1">
+                    <div class="col-xs col-sm-3 card tab">
                         <input type="checkbox" id="chck4">
                         <label class="tab-label" for="chck4">Brand Awareness & Reach</label>
                         <div class="tab-content">
@@ -95,7 +92,7 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-xs col-sm-3 col-sm-offset-1 card tab num-1">
+                    <div class="col-xs col-sm-3 col-sm-offset-1 card tab">
                         <input type="checkbox" id="chck5">
                         <label class="tab-label" for="chck5">World Class Talent</label>
                         <div class="tab-content">
@@ -105,13 +102,104 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-xs col-sm-3 col-sm-offset-1 card tab num-1">
+                    <div class="col-xs col-sm-3 col-sm-offset-1 card tab">
                         <input type="checkbox" id="chck6">
                         <label class="tab-label" for="chck6">Significant IP Vault</label>
                         <div class="tab-content">
                             <p>
                                 We've got valuable patents, cathchy trademarks, memorable URLs, and more in the Everest portfolio.
                             </p>
+                        </div>
+                    </div>
+                </div> -->
+                <div class=" block number-1">
+                    <div class="container-fluid row">
+                        <div class="column">
+                            <ul>
+                                <li>
+                                    <div class="card tab ">
+                                        <input type="checkbox" id="chck1">
+                                        <label class="tab-label" for="chck1">One of a kind - First to market</label>
+                                        <div class="tab-content">
+                                            <p>
+                                                There is a growing demand for specializationfrom passionate shoppers. Everest is the first online
+                                                marketplace
+                                                and
+                                                community hub exclusively built for the outdoor recreation world.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="card tab">
+                                        <input type="checkbox" id="chck2">
+                                        <label class="tab-label" for="chck2">Community Driven Platform</label>
+                                        <div class="tab-content">
+                                            <p>
+                                                Users can shop great deals on a wide range of product for different outdoor hobbies. They can also
+                                                consume
+                                                ansd share
+                                                content, converse, with sellers and brands, check out celebrity picks, and stream outdoor video
+                                                content.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="card tab">
+                                        <input type="checkbox" id="chck3">
+                                        <label class="tab-label" for="chck3">Early stage opportunity</label>
+                                        <div class="tab-content">
+                                            <p>
+                                                Everest is growing fast! With explosive growth just around the corner this is an exciting
+                                                oppourunityto
+                                                get
+                                                itn on the
+                                                groud floor. Together we can move mountains!
+                                            </p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="card tab">
+                                        <input type="checkbox" id="chck4">
+                                        <label class="tab-label" for="chck4">Brand Awareness & Reach</label>
+                                        <div class="tab-content">
+                                            <p>
+                                                As we grow we are building an eternal brand that we know will ane day soon be a household name. We're
+                                                looking
+                                                to truly
+                                                disrupt the online marketplacve industry
+                                            </p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="card tab">
+                                        <input type="checkbox" id="chck5">
+                                        <label class="tab-label" for="chck5">World Class Talent</label>
+                                        <div class="tab-content">
+                                            <p>
+                                                Our has worked for and with some of the biggest names in the industry. With tons of specific
+                                                experience in
+                                                the
+                                                ecommerece world as well, we're ready to boil the ocean.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="card tab">
+                                        <input type="checkbox" id="chck6">
+                                        <label class="tab-label" for="chck6">Significant IP Vault</label>
+                                        <div class="tab-content">
+                                            <p>
+                                                We've got valuable patents, cathchy trademarks, memorable URLs, and more in the Everest portfolio.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -148,7 +236,7 @@
         </section>
         <section class="talk-directly">
             <div class="row ">
-                <div class="col-xs col-sm-5 col-sm-offset-1 ">
+                <div class="col-xs col-sm-5">
                     <div class="talk-1">
                         <h1 class="">Talk Directly with <br> Bill Voss,</h1>
                         <p>Our Founder and Cheif Executive Officer</p>
@@ -208,7 +296,6 @@
         </section>
 
     </div>
-
 
     <!-- !script -->
 
